Fixed UI bug that appeared on mobile screens
The carousel was way too small for the mobile screen

--- a/portfolio/main/static/main/style.css
+++ b/portfolio/main/static/main/style.css
@@ -200,3 +200,13 @@ column-count: 1; /* number of columns */
     object-fit: cover;
     filter: brightness(55%);
 }
+
+@media (max-width: 768px) {
+    .carousel-item {
+        height: 800px;
+    }
+
+    .carousel-img {
+        object-position: 20% center; /* move image slightly left */
+    }
+}
